FrostWire 0.9.4:
 - Fixes Issue #1 reported by @untaimed18.
 - Upgrades to system update mechanism. Keeps backwards compatibility
   with 0.6.x.

FrostWire 0.9.2:
 - FrostWire will now start downloading torrents if the user clicks 
   on a torrent URL or tries to open a .torrent file with other app.
 - Fixed logic for back button press in Main activity.
 - Added search button press logic to Main activity.
 - Fixed logic error in http download handler.
 - Minor refactor in stop media logic in engine service.
 - Updated android-support-v4 library to revision 6.
 - Adjustments in the button layout of the Transfer toolbar buttons.
 - Fixed toast messages when connecting and disconnecting. Thanks untaimed18

FrostWire 0.9.1:
 - Fixed issues with local file sharing on the receiving end.
 - Adjustments on list adapter layouts.
 - New icons for "Library" and "padlocks".
 - Added infographic to explain local file sharing.
 - Made source code publicly available on GitHub.
 - FrostClick promos are now hidden as soon as a search is started.

FrostWire 0.9.0:
 - Core-upgrades: BitTorrent support. Metafrost protocol dropped.
 - Chat dropped.
 - Local Network transfers now over HTTP.
 - BitTorrent Smart Search. Searches 

FrostWire 0.6.3:
 - Core-upgrade: Peer manager performance upgrades should allow faster peer
   retrieval, peer list sharing, peer browsing.
 - Core-upgrade: Metafrost cache reset on restart to avoid file transfer errors
   due to previous miss calculations of metafrost files.
 - Core-fix: Multiple crashes reported were fixed.

FrostWire 0.6.2:
 - Core-upgrade: Avoids connecting to too many peers.
 - UI-upgrade: Shared finished downloads configuration is available on startup.
 - UI-upgrade: Asks for confirmation before deleting files.

FrostWire 0.6.1:
 - UI-upgrade: Simpler sharing controls, categories cannot be disabled,
   checkboxes are always shown when browsing yourself.
 - UI-upgrade: New FrostWire application icon.